# electron

./: BUILD.gn  filenames.gni
discord/: discord_video_decoder.cc  discord_video_decoder.h  discord_video_source.cc  discord_video_source.h  module.cc  overlay.h  overlay_win.cc
discord/public/: BUILD.gn  discord_video_frame.cc  discord_video_frame.h  electron_video_shared.h
patches/chromium/: .patches  allow_page_visibility_api_to_work_while_background_throttling_is.patch  chromerefresh2023_use_medium_weight_font_instead_of_bold_for_menus.patch  direct_video_sinks.patch  disable_getusermedia.patch  disable_nvidiavpsuperresolution_feature_by_default.patch  enabling_audiovideotracks_feature_to_use_htmlmediaelements.patch  file_input_type_should_fire_cancel_event_if_no_selection_change.patch  fix_disable_postquantumkyber.patch  fix_nvidia_hdr_crash_on_windows_32-bit.patch  fix_propagate_pointer_events_to_draggable_regions_in_frameless.patch  fix_workaround_electron_bug_with_frame_eviction.patch  ignore_mouse_buttons_other_than_left_right_middle.patch  revert_task_stop_using_nsrunloop_in_renderer_process.patch  silence_nonfatal_dump_on_gpu_process_mojo_error.patch  skid-proof_video_decoding_memory_use.patch  use_32-bit_partitionalloc_sizes_for_64-bit_builds.patch  use_sw_show_for_initial_state_not_shownormal.patch  workaround_for_idl_lexer_failure_when_generating_c_from.patch
patches/ffmpeg/: .patches  add_discord_ffmpeg_config_options.patch  add_functions_used_in_ClipsExporter.patch  configure_separate_subsystem_for_immersive_audio_model.patch  roll_ffmpeg.patch  (+3 more)
(+16 files in other folders)
